--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -14,6 +14,14 @@
         <name>${project.artifactId}</name>
 
         <dependencies>
+            <!-- Test -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>test</scope>
+            </dependency>
+
             <!-- Logging -->
             <dependency>
                 <groupId>log4j</groupId>
