improvement ZUSI SST, improvement GUI, added Test Cases & code clean

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -9,7 +9,7 @@
         </parent>
 
         <artifactId>webapp</artifactId>
-        <packaging>war</packaging>
+        <packaging>jar</packaging>
         <version>0.1</version>
         <name>${project.artifactId}</name>
 
@@ -93,6 +93,30 @@
                         <failOnMissingWebXml>false</failOnMissingWebXml>
                     </configuration>
                 </plugin>
+
+
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <configuration>
+                        <descriptorRefs>
+                            <descriptorRef>jar-with-dependencies</descriptorRef>
+                        </descriptorRefs>
+                        <archive>
+                            <manifest>
+                                <mainClass>ch.desm.middleware.app.core.StartApp</mainClass>
+                            </manifest>
+                        </archive>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
             </plugins>
 
         </build>
