--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ch.desm.middleware.app</groupId>
     <artifactId>core</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <version>0.1</version>
     <name>${project.artifactId}</name>
 
