--- a/module-test/tyrus-client/pom.xml
+++ b/module-test/tyrus-client/pom.xml
@@ -23,6 +23,12 @@
 				<version>1.12</version>
 			</dependency>
 
+            <dependency>
+                <groupId>org.glassfish.tyrus</groupId>
+                <artifactId>tyrus-container-grizzly-client</artifactId>
+                <version>1.12</version>
+            </dependency>
+
         </dependencies>
         <build>
             <directory>${project.basedir}/target</directory>
