--- a/module-mgmt-web/pom.xml
+++ b/module-mgmt-web/pom.xml
@@ -56,6 +56,8 @@
                 <version>2.6</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <attachClasses>true</attachClasses>
+                    <classesClassifier>classes</classesClassifier>
                 </configuration>
             </plugin>
         </plugins>
