--- a/module-ihome/pom.xml
+++ b/module-ihome/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-core</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
+        
         <!-- Core -->
         <dependency>
             <groupId>sebastianstraube.connectx</groupId>
