--- a/module-desm/config_desm.json
+++ b/module-desm/config_desm.json
@@ -1,8 +1,8 @@
 {
   "obermattUbw32ComPort":"COM3",
-  "cabineUbw32ComPort":"COM15",
+  "cabineUbw32ComPort":"COM14",
   "zusiHostIp":"127.0.0.1",
   "zusiPort": 1436,
   "DEFAULT_POLLING_FREQUENCY":25,
-  "enabledModules":["stellwerk_petrinet"]
+  "enabledModules":["stellwerk_petrinet", "stellwerk_ubw32"]
 }
