--- a/module-desm/config_desm.json
+++ b/module-desm/config_desm.json
@@ -4,5 +4,7 @@
   "zusiHostIp":"127.0.0.1",
   "zusiPort": 1436,
   "DEFAULT_POLLING_FREQUENCY":25,
-  "enabledModules":["stellwerk_petrinet", "stellwerk_ubw32"]
+  "enabledModules":["re420", "re420_petrinet","zusi"] // test cabine zusi
+  //"enabledModules":["re420", "re420_petrinet"] //test cabine
+  //"enabledModules":["stellwerk_ubw32","stellwerk_petrinet"] /test stellwerk
 }
